--- a/pagenation.html
+++ b/pagenation.html
@@ -3,10 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>我的微信卡券</title>
-    <link rel="stylesheet" href="../common.partial/header.css" />
-    <link rel="stylesheet" href="src/wx_cardList/index.css" />
-    <script src="../js/jquery-1.8.3.min.js"></script>
-    <script src="../js/common.js"></script>
+    <script src="src/common.lib/jquery/jquery-1.8.3.min.js"></script>
 </head>
 <body>
 <div id="header"></div>
@@ -53,12 +50,12 @@
         <div id="pop"></div>
     </div>
 </div>
-<script type="text/javascript" src="../common.lib/sea.js"></script>
-<script type="text/javascript" src="../common.lib/seajs-text/seajs-text-1.1.1/seajs-text.js"></script>
-<script type="text/javascript" src="../config.js"></script>
+<script type="text/javascript" src="src/common.lib/sea.js"></script>
+<script type="text/javascript" src="src/common.lib/seajs-text/seajs-text-1.1.1/seajs-text.js"></script>
+<script type="text/javascript" src="src/config.js"></script>
 <script>
-    seajs.use("sea_css", function(){
-        seajs.use("../tPagenation/index");
+    seajs.use("common.lib/sea_css", function(){
+        seajs.use("tPagenation/index");
     });
 </script>
 </body>
